# musicme_server

./: Cargo.toml  README.md  Rocket.toml  config.json
sql/: favorite.sql  musicme.sql  musicme_db.sql  playlist.sql  playlist2music.sql  users.sql
src/: config.rs  login.rs  main.rs  mariadb.rs  minio.rs  music.rs  musiclib.rs
src/db/: mod.rs  mysql.rs
