[package]
name = "musicme_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
mysql = "*"
figment={version = "*", features=["json"]}
rust-s3 ={version = "*"}
log = "*"